Added basic button styles

--- a/frontend/src/scss/globals/_colors.scss
+++ b/frontend/src/scss/globals/_colors.scss
@@ -5,6 +5,7 @@
 
   // used for buttons mostly
   --main-orange: hsl(28, 100%, 50%);
+  --main-white: hsl(0, 0%, 100%);
 
   /////////////////////////////
   ////// background colors ////
