--- a/frontend/src/Screen/SignInScreen.scss
+++ b/frontend/src/Screen/SignInScreen.scss
@@ -3,4 +3,5 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: 100% 100%;
+    background-blend-mode: darken;
 }
