--- a/frontend/src/Shared/Components/IngredientTable/IngredientTable.scss
+++ b/frontend/src/Shared/Components/IngredientTable/IngredientTable.scss
@@ -1,6 +1,4 @@
 .MuiTableContainer-root {
-  padding-left: 100px;
-  padding-right: 100px;
   padding-bottom: 100px;
 }
 .MuiTable-root {
@@ -18,6 +16,7 @@
   span {
     background-color: var(--main-orange);
     padding: 5px;
+    margin-right: 2px;
     border-radius: 5px;
     color: white;
   }
