--- a/frontend/src/Screen/SignInScreen/SignInScreen.scss
+++ b/frontend/src/Screen/SignInScreen/SignInScreen.scss
@@ -1,7 +1,37 @@
+// body{
+//     background-image: url('FoodPhoto.jpg');
+//     background-repeat: no-repeat;
+//     background-attachment: fixed; 
+//     background-size: 100% 100%;
+//     background-blend-mode: darken;
+// }
 body{
-    background-image: url('FoodPhoto.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
-    background-size: 100% 100%;
-    background-blend-mode: darken;
+	background-color:#f0f2f5;
+}
+.signin-container{
+	padding-top: 8rem;
+	justify-content:center;
+	margin:auto;
+	&-menu{
+		margin: auto;
+		&_card{
+			margin:auto;
+			padding: 4rem;
+			text-align:center;
+		}
+	}
+}
+
+.icon-center {
+	margin:auto;
+}
+@media (max-width: 768px) {
+	.signin-container{
+		padding:0;
+		&-menu{
+			&_card{
+				padding: 2rem;
+			}
+		}
+	}
 }
