used BaseLayout in components & basic style changes

--- a/frontend/src/Shared/Components/BaseLayout/BaseLayout.scss
+++ b/frontend/src/Shared/Components/BaseLayout/BaseLayout.scss
@@ -2,4 +2,6 @@
   padding-top: 3vh;
   padding-right: 1vh;
   padding-left: 1vh;
+  background-color: hsl(0, 0%, 94%) !important;
+  box-shadow: none !important;
 }
