--- a/frontend/src/Shared/Components/IngredientTable/IngredientTable.scss
+++ b/frontend/src/Shared/Components/IngredientTable/IngredientTable.scss
@@ -1,5 +1,5 @@
 .MuiTableContainer-root {
-  padding-bottom: 100px;
+  padding: 2rem;
 }
 .MuiTable-root {
   border-style: solid;
@@ -10,6 +10,10 @@
   background-color: lightgray;
   font-weight: 700;
 }
+.MuiTableCell-root{
+	text-align: center !important;
+}
+
 .calories-Sum {
   margin-top: 10px;
   text-align: right;
@@ -18,6 +22,6 @@
     padding: 5px;
     margin-right: 2px;
     border-radius: 5px;
-    color: white;
+    color: white !important;
   }
 }
