Added most of settings, left to to add reset password & mail

--- a/frontend/src/scss/globals/_boilerplate.scss
+++ b/frontend/src/scss/globals/_boilerplate.scss
@@ -14,7 +14,7 @@ body {
   padding: 0;
   font-family: var(--main-font);
   background: var(--bg-white-dark);
-  color: var(--fnt-primary-color);
+ // color: var(--fnt-primary-color);
 }
 .button-secondary{
 	color:black !important;
