--- a/frontend/src/Shared/Components/IngredientTable/IngredientTable.scss
+++ b/frontend/src/Shared/Components/IngredientTable/IngredientTable.scss
@@ -10,14 +10,22 @@
   background-color: lightgray;
   font-weight: 700;
 }
-.calories-Sum {
+.table-panel {
   margin-top: 10px;
-  text-align: right;
-  span {
+  .calories-Sum {
     background-color: var(--main-orange);
     padding: 5px;
     margin-right: 2px;
     border-radius: 5px;
     color: white;
+    float: right;
+  }
+  .add-button {
+    width: 3vh;
+    height: 3vh;
+    border-radius: 5px;
+    border: "1px solid";
+    color: white;
+    float: left;
   }
 }
