Changge js to tsx

--- a/frontend/src/Screen/RecipeEditScreen/RecipeEditScreen.scss
+++ b/frontend/src/Screen/RecipeEditScreen/RecipeEditScreen.scss
@@ -1,9 +1,9 @@
 .create-recipe-card{
-  margin-top: auto;
-  margin-left: 10px;
-  margin-right: 10px;
   .css-m5vj9m-MuiStepper-root{
-    margin-top: 10px;
+    padding-top: 5vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
+    padding-bottom: 5vh;
   }
 }
 .create-recipe-step-content{
