Add rating to card

--- a/frontend/src/Shared/Components/Card/CustomCard.scss
+++ b/frontend/src/Shared/Components/Card/CustomCard.scss
@@ -1,5 +1,8 @@
 .card {
   width: 100vh;
+  .recipe-rating {
+    float: right;
+  }
   .expanded-content {
     line-height: 20px;
     margin-left: 2vh;
