--- a/frontend/src/Screen/RecipeEditScreen/RecipeEditScreen.scss
+++ b/frontend/src/Screen/RecipeEditScreen/RecipeEditScreen.scss
@@ -5,6 +5,9 @@
     padding-right: 2vh;
     padding-bottom: 5vh;
   }
+  .box-step {
+    margin: 1vh;
+  }
 }
 .create-recipe-step-content{
   margin: 10px;
